ds_to_dbt_transpiler/DSXParser.py
# Generated from ds_to_dbt_transpiler/DSX.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DSXParser ( Parser ):

    grammarFileName = "DSX.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'BEGIN DSJOB'", "'END DSJOB'", "'BEGIN DSSTAGE'",
                     "'END DSSTAGE'", "'BEGIN DSRECORD'", "'END DSRECORD'",
                     "'Identifier'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "NAME", "STRING", "WS" ]

    RULE_dsx = 0
    RULE_dsjob = 1
    RULE_dsstage = 2
    RULE_dsrecord = 3
    RULE_identifier = 4
    RULE_property = 5
    RULE_propname = 6
    RULE_propvalue = 7

    ruleNames =  [ "dsx", "dsjob", "dsstage", "dsrecord", "identifier",
                   "property", "propname", "propvalue" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    NAME=8
    STRING=9
    WS=10

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DsxContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dsjob(self):
            return self.getTypedRuleContext(DSXParser.DsjobContext,0)


        def EOF(self):
            return self.getToken(DSXParser.EOF, 0)

        def getRuleIndex(self):
            return DSXParser.RULE_dsx

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDsx" ):
                listener.enterDsx(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDsx" ):
                listener.exitDsx(self)




    def dsx(self):

        localctx = DSXParser.DsxContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_dsx)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.dsjob()
            self.state = 17
            self.match(DSXParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DsjobContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(DSXParser.IdentifierContext,0)


        def property_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSXParser.PropertyContext)
            else:
                return self.getTypedRuleContext(DSXParser.PropertyContext,i)


        def dsstage(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSXParser.DsstageContext)
            else:
                return self.getTypedRuleContext(DSXParser.DsstageContext,i)


        def getRuleIndex(self):
            return DSXParser.RULE_dsjob

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDsjob" ):
                listener.enterDsjob(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDsjob" ):
                listener.exitDsjob(self)




    def dsjob(self):

        localctx = DSXParser.DsjobContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_dsjob)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            self.match(DSXParser.T__0)
            self.state = 20
            self.identifier()
            self.state = 25
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3 or _la==8:
                self.state = 23
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [8]:
                    self.state = 21
                    self.property_()
                    pass
                elif token in [3]:
                    self.state = 22
                    self.dsstage()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 27
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 28
            self.match(DSXParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DsstageContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(DSXParser.IdentifierContext,0)


        def property_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSXParser.PropertyContext)
            else:
                return self.getTypedRuleContext(DSXParser.PropertyContext,i)


        def dsrecord(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSXParser.DsrecordContext)
            else:
                return self.getTypedRuleContext(DSXParser.DsrecordContext,i)


        def getRuleIndex(self):
            return DSXParser.RULE_dsstage

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDsstage" ):
                listener.enterDsstage(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDsstage" ):
                listener.exitDsstage(self)




    def dsstage(self):

        localctx = DSXParser.DsstageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_dsstage)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.match(DSXParser.T__2)
            self.state = 31
            self.identifier()
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5 or _la==8:
                self.state = 34
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [8]:
                    self.state = 32
                    self.property_()
                    pass
                elif token in [5]:
                    self.state = 33
                    self.dsrecord()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 39
            self.match(DSXParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DsrecordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(DSXParser.IdentifierContext,0)


        def property_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSXParser.PropertyContext)
            else:
                return self.getTypedRuleContext(DSXParser.PropertyContext,i)


        def getRuleIndex(self):
            return DSXParser.RULE_dsrecord

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDsrecord" ):
                listener.enterDsrecord(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDsrecord" ):
                listener.exitDsrecord(self)




    def dsrecord(self):

        localctx = DSXParser.DsrecordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_dsrecord)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(DSXParser.T__4)
            self.state = 42
            self.identifier()
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 43
                self.property_()
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 49
            self.match(DSXParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def propvalue(self):
            return self.getTypedRuleContext(DSXParser.PropvalueContext,0)


        def getRuleIndex(self):
            return DSXParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)




    def identifier(self):

        localctx = DSXParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_identifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(DSXParser.T__6)
            self.state = 52
            self.propvalue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropertyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def propname(self):
            return self.getTypedRuleContext(DSXParser.PropnameContext,0)


        def propvalue(self):
            return self.getTypedRuleContext(DSXParser.PropvalueContext,0)


        def getRuleIndex(self):
            return DSXParser.RULE_property

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProperty" ):
                listener.enterProperty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProperty" ):
                listener.exitProperty(self)




    def property_(self):

        localctx = DSXParser.PropertyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_property)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.propname()
            self.state = 55
            self.propvalue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropnameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(DSXParser.NAME, 0)

        def getRuleIndex(self):
            return DSXParser.RULE_propname

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPropname" ):
                listener.enterPropname(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPropname" ):
                listener.exitPropname(self)




    def propname(self):

        localctx = DSXParser.PropnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_propname)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(DSXParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropvalueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(DSXParser.STRING, 0)

        def getRuleIndex(self):
            return DSXParser.RULE_propvalue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPropvalue" ):
                listener.enterPropvalue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPropvalue" ):
                listener.exitPropvalue(self)




    def propvalue(self):

        localctx = DSXParser.PropvalueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_propvalue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(DSXParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
